manifests/kubewarden-controller-2.1.0.tgz-manifest.yaml
---
# Source: kubewarden-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kubewarden-controller-metrics-service
  namespace: default
  labels:
    helm.sh/chart: kubewarden-controller-2.1.0
    app.kubernetes.io/name: kubewarden-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.13.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubewarden
  annotations:
    
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/name: kubewarden-controller
    app.kubernetes.io/instance: my-release
---
# Source: kubewarden-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kubewarden-controller-webhook-service
  namespace: default
  labels:
    helm.sh/chart: kubewarden-controller-2.1.0
    app.kubernetes.io/name: kubewarden-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.13.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubewarden
  annotations:
    
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/name: kubewarden-controller
    app.kubernetes.io/instance: my-release
---
# Source: kubewarden-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-kubewarden-controller
  namespace: default
  labels:
    helm.sh/chart: kubewarden-controller-2.1.0
    app.kubernetes.io/name: kubewarden-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.13.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubewarden
  annotations:
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubewarden-controller
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        
      labels:
        helm.sh/chart: kubewarden-controller-2.1.0
        app.kubernetes.io/name: kubewarden-controller
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "v1.13.0"
        app.kubernetes.io/component: controller
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubewarden
    spec:
      serviceAccountName: my-release-kubewarden-controller
      containers:
      - name: manager
        args:
        - --leader-elect
        - --deployments-namespace=default
        - --default-policy-server=default
        - --always-accept-admission-reviews-on-deployments-namespace
        - --zap-log-level=info
        command:
        - /manager
        image: 'ghcr.io/kubewarden/kubewarden-controller:v1.13.0'
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 200Mi
          requests:
            cpu: 250m
            memory: 70Mi
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 10
---
# Source: kubewarden-controller/templates/cert-tls.yaml
# cert-manager resources
---
# Source: kubewarden-controller/templates/post-install-hook.yaml
# In some scenarios when telemetry is enabled, due some concurrency issues,
# when the OTEL operator try to inject the collector container in the controller
# pod, it cannot find a valid collector configuration. Therefore, it is necessary
# to recreate the controller pod after the installation. This ensures that the
# controller pod will have the OTEL collector container.
---
# Source: kubewarden-controller/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/my-release-kubewarden-controller-serving-cert
    
  name: kubewarden-controller-mutating-webhook-configuration
  labels:
    helm.sh/chart: kubewarden-controller-2.1.0
    app.kubernetes.io/name: kubewarden-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.13.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubewarden
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-kubewarden-controller-webhook-service
      namespace: default
      path: /mutate-policies-kubewarden-io-v1-clusteradmissionpolicy
  failurePolicy: Fail
  name: mclusteradmissionpolicy.kb.io
  rules:
  - apiGroups:
    - policies.kubewarden.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusteradmissionpolicies
  sideEffects: None
- admissionReviewVersions:
    - v1
    - v1beta1
  clientConfig:
    service:
      name: my-release-kubewarden-controller-webhook-service
      namespace: default
      path: /mutate-policies-kubewarden-io-v1-policyserver
  failurePolicy: Fail
  name: mpolicyserver.kb.io
  rules:
    - apiGroups:
        - policies.kubewarden.io
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - policyservers
  sideEffects: None
- admissionReviewVersions:
    - v1
    - v1beta1
  clientConfig:
    service:
      name: my-release-kubewarden-controller-webhook-service
      namespace: default
      path: /mutate-policies-kubewarden-io-v1-admissionpolicy
  failurePolicy: Fail
  name: madmissionpolicy.kb.io
  rules:
    - apiGroups:
        - policies.kubewarden.io
      apiVersions:
        - v1
      operations:
        - CREATE
        - UPDATE
      resources:
        - admissionpolicies
  sideEffects: None
---
# Source: kubewarden-controller/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/my-release-kubewarden-controller-serving-cert
    
  name: kubewarden-controller-validating-webhook-configuration
  labels:
    helm.sh/chart: kubewarden-controller-2.1.0
    app.kubernetes.io/name: kubewarden-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.13.0"
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubewarden
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-kubewarden-controller-webhook-service
      namespace: default
      path: /validate-policies-kubewarden-io-v1-clusteradmissionpolicy
  failurePolicy: Fail
  name: vclusteradmissionpolicy.kb.io
  rules:
  - apiGroups:
    - policies.kubewarden.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusteradmissionpolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-kubewarden-controller-webhook-service
      namespace: default
      path: /validate-policies-kubewarden-io-v1-admissionpolicy
  failurePolicy: Fail
  name: vadmissionpolicy.kb.io
  rules:
  - apiGroups:
    - policies.kubewarden.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - admissionpolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: my-release-kubewarden-controller-webhook-service
      namespace: default
      path: /validate-policies-kubewarden-io-v1-policyserver
  failurePolicy: Fail
  name: vpolicyserver.kb.io
  rules:
  - apiGroups:
    - policies.kubewarden.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - policyservers
  sideEffects: None
